--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ h6 {
 #titulo {
   width: 100%;
   height: 100vh;
-  background: url(".../img/fachadas/e.jpg") center;
+  background: url("../img/fachadas/e.jpg") center;
   background-size: cover;
   position: relative;
   margin-bottom: -70px;
